[update]一些用处不大的注释和方法更新